fix showing data in table and not showing or hiding burger left menu

--- a/AngularApp/angularapp.client/src/app/app.component.css
+++ b/AngularApp/angularapp.client/src/app/app.component.css
@@ -12,7 +12,8 @@ tr:nth-child(odd) {
     background: #FFF;
 }
 
-th, td {
+th,
+td {
     padding-left: 1rem;
     padding-right: 1rem;
 }
